# Osu12Jumper

./: .gitignore  BeatmapConvert.cpp  BeatmapConvert.hpp  CMakeLists.txt  CMakeSettings.json  Difficulty.hpp  Doxyfile  HAG - Colorful (Sotarks) [Prismatic1-2].osu  JumpGenerater.cpp  JumpGenerater.h  JumpGenerator.cpp  JumpGenerator.hpp  Osu12Jumper.sln  Osu12Jumper.vcxproj  Osu12Jumper.vcxproj.filters  OsuParser.hpp  README.md  main.cpp  vcpkg.json
.github/workflows/: linux.yml  main.yml  windows.yml
AutoMapper/: CMakeLists.txt  main.cpp
BeatmapConvert/: BeatmapConvert.cpp  Mania.Pattern.cpp  PatternGenerator.cpp
BeatmapConvert/include/: BeatmapConvert.hpp  BeatmapConverter.hpp  Mania.Pattern.hpp  PatternGenerator.hpp
html/: _beatmap_convert_8hpp.html  _beatmap_convert_8hpp.js  _beatmap_convert_8hpp_source.html  _beatmap_converter_8hpp_source.html  _difficulty_8hpp.html  _difficulty_8hpp_source.html  _for-example.html  _helper_function_8cpp.html  _helper_function_8cpp.js  _jump_generater_8h_source.html  _jump_generator_8hpp_source.html  _mania_8_pattern_8hpp_source.html  _osu_parser_8hpp.html  _osu_parser_8hpp.js  _osu_parser_8hpp_source.html  _pattern_generator_8hpp_source.html  _random_engine_8hpp_source.html  _std_parse_8cpp.html  _std_parse_8cpp.js  _utils_8cpp.html  _utils_8cpp.js  annotated.html  annotated_dup.js  class_beatmap_converter-members.html  class_beatmap_converter.html  class_beatmap_converter.js  class_fixture-members.html  class_fixture.html  class_fixture.js  class_jump_generater-members.html  class_jump_generater.html  class_jump_generator-members.html  class_jump_generator.html  class_jump_generator.js  class_mania_1_1_distance_object_pattern_generator-members.html  class_mania_1_1_distance_object_pattern_generator.html  class_mania_1_1_distance_object_pattern_generator.js  class_mania_1_1_hit_object_pattern_generator-members.html  class_mania_1_1_hit_object_pattern_generator.html  class_mania_1_1_hit_object_pattern_generator.js  (+174 more)
html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  enums_0.js  enumvalues_0.js  (+50 more)
include/: JumpGenerator.hpp  RandomEngine.hpp
test/: CMakeLists.txt  HelperFunction.cpp  ManiaParse.cpp  StdConvertToMania.cpp  StdParse.cpp  Utils.cpp  test.cpp
